--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-requests
-python-dotenv
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
+fastapi==0.128.0
+idna==3.11
+pydantic==2.12.5
+pydantic-core==2.41.5
+python-dotenv==1.2.1
+requests==2.32.5
+starlette==0.50.0
+typing-extensions==4.15.0
+typing-inspection==0.4.2
+urllib3==2.6.3
